fix: add overflow control at MovieLIstItem

--- a/client/src/components/MovieListItem/MovieListItem.module.css
+++ b/client/src/components/MovieListItem/MovieListItem.module.css
@@ -21,6 +21,13 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  overflow: hidden;
+}
+
+.info * {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .name {
