--- a/client/src/components/SettingsTab/SettingsTab.module.css
+++ b/client/src/components/SettingsTab/SettingsTab.module.css
@@ -1,6 +1,7 @@
 .settings {
   flex-grow: 1;
   height: 100%;
+  width: 45%;
   filter: drop-shadow(0px 16px 32px var(--color-primary-dark));
 }
 
